[package]
name = "ffmpeg-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
models = { workspace = true }
futures-core = "0.3.*"
futures = "0.3.*"
snafu = { version = "0.7.4", features = [ "std", "backtraces", "futures"] }