[package]
name = "job-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffedit = { path = "../ffedit" }
models = { path = "../models" }
redis = { version = "0.22.1", features = ["tokio-comp"] }
tokio = { version = "1.22.0", features = ["full"] }
async-trait = "0.1.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
