[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
models = { workspace = true }
ffedit = { workspace = true }
queue = { workspace = true }
redis = { workspace = true }
rust-s3 = { workspace = true }
config = { workspace = true }
serde_json = { workspace = true }